# GRADE

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/pages/: Evaluate.tsx  Home.tsx  Results.tsx  UploadBoth.tsx  UploadKey.tsx  UploadSheet.tsx
scripts/: diagnose_pg_dns.py  embed_rag_to_postgres.py  ocr_pdf.py  run_api_windows.ps1  test_components.py  verify_key_pdfs.py  verify_phases.py  verify_postgres_db.py
src/autograder/: __init__.py  api.py  db.py  embeddings.py  key_pdf.py  ocr.py  preprocessing.py  rag_extract.py  report_pdf.py  schemas.py  scoring.py
src/autograder/prompts/: grading_v2.txt
supabase/migrations/: 20260405120000_enable_pgvector.sql  20260405120100_grade_tables.sql  20260413120000_rag_chunks.sql
tests/: __init__.py  conftest.py  test_answer_keys_order.py  test_api_http.py  test_embeddings_scoring.py  test_key_pdf.py  test_ocr.py  test_phase34_api.py  test_preprocessing.py  test_rag_extract.py  test_rag_pg.py
